css/style.css
/* ... */
#header.bottom #header-bar.autohide:not(:hover) {
  -webkit-transform: translateY(100%);
  transform: translateY(100%);
}
#toggle-header-bar {
  left: 0;
  right: 0;
  height: 10px;
  position: absolute;
}
#header.top #toggle-header-bar {
  cursor: n-resize;
  bottom: -10px;
}
#header.bottom #toggle-header-bar {
  cursor: s-resize;
  top: -10px;
}
#header.top #header-bar.autohide #toggle-header-bar {
  cursor: s-resize;
}
#header.bottom #header-bar.autohide #toggle-header-bar {
  cursor: n-resize;
}
#header-bar a:not(.entry) {
  text-decoration: none;
  padding: 1px;
}
.shortcut:not(:last-child)::after {
  content: " / ";
}
.brackets-wrap::before {
  content: " [ ";
}
.brackets-wrap::after {
  content: " ] ";
}

/* Notifications */
#notifications {
  height: 0;
  text-align: center;
}
#header.bottom #notifications {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
}
.notification {
  color: #FFF;
  font-weight: 700;
  text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
  box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
  border-radius: 2px;
  margin: 1px auto;
  width: 500px;
  max-width: 100%;
  position: relative;
  transition: all .25s ease-in-out;
}
.notification.error {
  background-color: hsla(0, 100%, 38%, .9);
}
.notification.warning {
  background-color: hsla(36, 100%, 38%, .9);
}
.notification.info {
  background-color: hsla(200, 100%, 38%, .9);
}
.notification.success {
  background-color: hsla(104, 100%, 38%, .9);
}
.notification a {
  color: white;
}
.notification > .close {
  padding: 7px;
  top: 0;
  right: 0;
  position: absolute;
}
.message {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding: 6px 20px;
  max-height: 200px;
  width: 100%;
  overflow: auto;
}

/* Settings */
:root.fourchan-x body {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
#overlay {
  background-color: rgba(0, 0, 0, .5);
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}
#fourchanx-settings {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  box-shadow: 0 0 15px rgba(0, 0, 0, .15);
  height: 600px;
  max-height: 100%;
  width: 900px;
  max-width: 100%;
  margin: auto;
  padding: 3px;
  display: flex;
  flex-direction: column;
}
#fourchanx-settings > nav {
  display: flex;
  padding: 2px 2px 0;
}
#fourchanx-settings > nav a {
  text-decoration: underline;
}
#fourchanx-settings > nav a.close {
  text-decoration: none;
  padding: 0 2px;
}
.sections-list {
  flex: 1;
}
.tab-selected {
  font-weight: 700;
}
.section-container {
  flex: 1;
  position: relative;
}
.section-container > section {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: auto;
}
.section-sauce ul,
.section-rice ul {
  list-style: none;
  margin: 0;
  padding: 8px;
}
.section-sauce li,
.section-rice li {
  padding-left: 4px;
}
.section-main label {
  text-decoration: underline;
}
.section-filter ul,
.section-qr ul {
  padding: 0;
}
.section-filter li,
.section-qr li {
  margin: 10px 40px;
}
.section-filter textarea {
  height: 500px;
}
.section-qr textarea {
  height: 200px;
}
.section-sauce textarea {
  height: 350px;
}
.section-rice .field[name="boardnav"] {
  width: 100%;
}
.section-rice textarea {
  height: 150px;
}
.section-archives table {
  width: 100%;
}
.section-archives th:not(:first-child) {
  width: 30%;
}
.section-archives td {
  text-align: center;
}
.section-archives select {
  width: 90%;
}
.section-keybinds .field {
  font-family: monospace;
}
#fourchanx-settings fieldset {
  border: 1px solid;
  border-radius: 3px;
}
#fourchanx-settings legend {
  font-weight: 700;
}
#fourchanx-settings textarea {
  font-family: monospace;
  min-width: 100%;
  max-width: 100%;
}
#fourchanx-settings code {
  color: #000;
  background-color: #FFF;
  padding: 0 2px;
}
.unscroll {
  overflow: hidden;
}

/* Index */
:root.index-loading .navLinks,
:root.index-loading .board,
:root.index-loading .pagelist {
  display: none;
}
#index-search {
  padding-right: 1.5em;
  width: 100px;
  transition: color .25s, border-color .25s, width .25s;
}
#index-search:focus,
#index-search[data-searching] {
  width: 200px;
}
#index-search-clear {
  color: gray;
  margin-left: -1.25em;
}
<% if (type === 'crx') { %>
/* ``::-webkit-*'' selectors break selector lists on Firefox. */
#index-search::-webkit-search-cancel-button,
<% } %>
#index-search:not([data-searching]) + #index-search-clear {
  display: none;
}
.summary {
  text-decoration: none;
}
.catalog-mode {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.catalog-thread {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 165px;
  margin: 0 2px 5px;
  max-height: 320px;
  word-break: break-word;
}
.thumb {
  flex-shrink: 0;
  position: relative;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 2px;
  box-shadow: 0 0 5px rgba(0, 0, 0, .25);
}
.thumb.spoiler-file {
  background-size: 100px;
  width: 100px;
  height: 100px;
}
.thumb.deleted-file {
  background-size: 127px 13px;
  width: 127px;
  height: 13px;
  padding: 20px 11px;
}
.thumb.no-file {
  background-size: 77px 13px;
  width: 77px;
  height: 13px;
  padding: 20px 36px;
}
.thread-icons > img {
  width: 1em;
  height: 1em;
  margin: 0;
  vertical-align: text-top;
}
.thumb:not(:hover) > .menu-button:not(.open) > i {
  display: none;
}
.thumb > .menu-button {
  position: absolute;
  top: 0;
  right: 0;
}
.thumb > .menu-button > i {
  width: 1em;
  height: 1em;
  padding: 1px;
  border-radius: 0 2px 0 2px;
  font-size: 14px;
  text-align: center;
}
.thread-stats {
  flex-shrink: 0;
  cursor: help;
  font-size: 10px;
  font-weight: 700;
  margin-top: 2px;
}
.catalog-thread > .subject {
  flex-shrink: 0;
  font-weight: 700;
  line-height: 1;
  text-align: center;
}
.catalog-thread > .comment {
  flex-shrink: 1;
  align-self: stretch;
  overflow: hidden;
  text-align: center;
}
/* ... */

